test/arrays/bradc/localSlices/nonlocalslice.good
nonlocalslice.chpl:4: error: halt encountered - Attempting to take a local slice of an array on locale 0 from locale 1
